# NextJS-ClothingShop

./: .gitignore  .gitmodules  localhost+2-key.pem  localhost+2.pem  package-lock.json  package.json  vite.config.js
Frontend/: .gitignore  db.json  docker-compose.yaml  package.json  vite.config.js
Frontend/.next/dev/: build-manifest.json  prerender-manifest.json  trace
Frontend/src/: App.jsx  index.css
Frontend/src/app/: globals.css  layout.tsx  not-found.tsx
Frontend/src/components/: AllProducts.tsx  Card.jsx  Header.tsx  Menu.tsx  MenuItem.tsx  Product.tsx  SkeletonLoading.tsx  (+1 more)
backend/: alembic.ini  dev.env  pyproject.toml
backend/alembic/: env.py
backend/src/: main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 2025_10_29_1907-11a0586e1cef_create_product_and_user_tables.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  product.py  user.py
backend/src/core/: __init__.py  mixins.py  setting.py  settings.py
backend/src/core/db/: base.py  db_depends.py  db_lifetime.py
backend/src/models/: __init__.py  category.py  product.py  products.py  user.py
backend/src/routes/: __init__.py  product.py
backend/src/schemas/: __init__.py  product.py
src/: main.jsx
src/api/: products.js
src/app/: layout.tsx
src/components/: 3D-object.jsx  Header.tsx  Menu.tsx  MenuItem.tsx  ThemeSwitcher.tsx  VIedoComponent.jsx  footer.jsx  header.jsx
src/config/: pages.config.ts
src/data/: MenuNav.data.ts
src/hooks/: useChangeRating.js
src/providers/: Providers.tsx  TanstackQueryProvider.jsx
src/store/: ThemeStore.tsx
(+294 files in other folders)
